tests/fail/include_with_default.txt
error[E0036]: `default` statements are not allowed in included files
 --> /included:1:1
  |
1 | default target="foo"
  | ^^^^^^^^^^^^^^^^^^^^ `default` statements are not allowed in included files
  |
  = help: move `default` statements to the top-level Werkfile
note: included here
 --> /INPUT:1:1
  |
1 | include "included"
  | ^^^^^^^^^^^^^^^^^^
